BC-527: Move existing sorting logic to java